Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91714

QSizeGrip can not continue resize on the second screen

XMLWordPrintable

    • Linux/X11
    • be643a27f44caa67fa34f10a7b7061a841feb943 (qt/qtbase/dev)

      Prerequisites:
      1. Connect two screens under linux;
      2. Display the desktop in split screen mode;

      Steps to reproduce:
      1. Create a QMainWindow program with ui, and then use QSizeGrip to resize on the first screen;
      2. When resizeing to the right edge of the first screen, continue to move the mouse on the second screen, and the window will no longer resize;

      phenomenon:
      1. When the QSizeGrip is not used for resize, the window can be resized on the second screen;
      2. When using QSizeGrip to resize, hope the window also can be resized on the second screen

      3. When our main screen is screen0, we need to consider resize the window when other screens are in different positions,see resize.png 

      test code:

      int main(int argc, char *argv[])
      {
          QApplication a(argc, argv);
      
          QMainWindow w;
          w.show();
      
          QStatusBar *s = w.statusBar();
          s = new QStatusBar(&w);
      
          return a.exec();
      }
      

        1. 截图录屏_选择区域_20210310195930.mp4
          2.21 MB
          kingderzhang
        2. resize.png
          14 kB
          kingderzhang
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            kingderzhang kingderzhang
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes