src/plugins/platforms/cocoa/qcocoatheme.mm
@@ -519,6 +519,8 @@ QVariant QCocoaTheme::themeHint(ThemeHint hint) const
         return QVariant(int(QTextCharFormat::DotLine));
     case QPlatformTheme::UseFullScreenForPopupMenu:
         return QVariant(bool([[NSApplication sharedApplication] presentationOptions] & NSApplicationPresentationFullScreen));
+    case QPlatformTheme::InteractiveResizeAcrossScreens:
+        return !NSScreen.screensHaveSeparateSpaces;
     default:
         break;
     }
